adding bootsrap 5 , and LogoutController

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-
-</head>
+<div th:insert="fragments/header.html :: header"> </div>
 <body>
-<h1>TEST PAGE</h1>
+<h1>Servlet Basic Login And Register</h1>
+<p>Your database data should be in "DatabaseManager.java" class</p>
+
+<div class="container">
+    <div class="jumbotron">
+<h1>Links</h1>
+<a href="/login">Login</a>
+<a href="/register">Register</a>
+</div>
+</div>
 </body>
-</html>
